# cmr-phase2phase-registration

./: .gitignore  README.md  environment.yaml  environment_tf.yaml  environment_tf_241.yaml  ipython_log.py  requirements.txt  requirements_conda.txt  requirements_tf23.txt  setup.cfg  setup.py  tf27.yml
data/interim/: ffmpeg_command.txt
docs/: Makefile  conf.py  index.rst  make.bat
notebooks/Dataset/: Basic_generator_concept.ipynb  Mask_resampling_tests.ipynb  Merge_predicted_phases_into_metadata.ipynb  Onehot_creation_steps.ipynb  Test_Generator.ipynb  Test_Generator_motion.ipynb  Test_Generator_phase_regression.ipynb  Test_Window_motion.ipynb  Test_acdc2onehot.ipynb  Test_compose.ipynb  Test_find_center.ipynb  Test_show_magnitude_over_time.ipynb  Test_temporal_resampling.ipynb  old_notebooks_from_previous_work.ipynb  phase_regression_tests.ipynb
notebooks/Evaluate/: AHA_segments.ipynb  Eval_p2p_msk_displacement.ipynb  Evaluate_cv.ipynb  segmental_pvalues_HolmBonferroni.ipynb
notebooks/Predict/: Predict.ipynb  Predict_multiple.ipynb  Predict_tests.ipynb
notebooks/Train/: 3D_Motion_v1.ipynb  Test_Generator_phase_regression.ipynb  Train_cv.ipynb  tests_with_learnable_dropout.ipynb
src/data/: Dataset.py  Generators.py  PhaseGenerators.py  Preprocess.py
src/models/: Evaluate_moved_myo.py  KerasLayers.py  Models.py  PhaseRegModels.py  Unets.py  evaluate_phase_reg.py  predict_model.py  predict_motion_model.py  predict_phase_reg_model.py  test_phase_motion_generator.py  train_model.py  (+2 more)
strain_predictions/: README.odt  helperfunctions.py  plot_strain.ipynb
(+38 files in other folders)
