[metadata]
# replace with your username:
name = mri-preprocessing-pkg-sven
version = 0.0.1
author = Sven Koehler
author_email = emailsvenkoehler@gmx.net
description = some helper to preprocess mri data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Cardio-AI/dynamic-cmr-models
project_urls =
    git = https://github.com/Cardio-AI/dynamic-cmr-models
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src/data
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src/data